# pyNOMIC

./: LBT_klip.py  LBT_vip_pca.py  LICENSE  README.md  klip_nomic.ipynb  master_badmap.fits  pyNOMIC.py  pyNOMIC_reduction.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
notebooks/: singlesidedreduction.ipynb
pyNOMIC/: contrast_estimation.py  flat_methods.py  helper_functions.py  preprocessing.py
